# Backend

./: .gitignore  README.md  env.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
python/face/: detection.py
src/: app.ts
src/lib/: app-server.ts  face-server.ts  feed-server.ts  mongod.ts  parse-dashboard.js  parse-server.js
src/types/: feed.ts
src/utils/: mkdir.ts
